--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" type="image/x-icon" href="imgs/meteorologia.png">
 </head>
 
@@ -145,7 +145,7 @@
 
                 <div class="btn-nav">
                     <button data-bs-toggle="collapse" data-bs-target="#paps" aria-expanded="false" aria-controls="paps"
-                        class="btn btn-primary btn-collapse dropdown-toggle" id="btn-paps">Previsão da Anomalia de
+                        class="btn btn-primary btn-collapse dropdown-toggle text-truncate" id="btn-paps">Previsão da Anomalia de
                         Precipitação Semanal (BAM
                         Subsazonal)</button>
                     <div class="collapse" id="paps">
@@ -182,7 +182,7 @@
         </div>
     </footer>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script></script>
     <script src="js/scripts.js"></script>
 </body>
 
