Updated image directory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-        <link rel="icon" type="image/x-icon" href="imgs/meteorologia.png">
+        <link rel="icon" type="image/x-icon" href="img/meteorologia.png">
     </head>
 
     <body>
@@ -136,10 +136,10 @@
         <footer>
             <div class="links container">
                 <div class="link">
-                    <a href="http://www.acessoainformacao.gov.br/"><img src="imgs/acesso-info.png" class="acesso-info">Acesso à informação</a>
+                    <a href="http://www.acessoainformacao.gov.br/"><img src="img/acesso-info.png" class="acesso-info">Acesso à informação</a>
                 </div>
                 <div class="link">
-                    <a href="http://www.brasil.gov.br/"><img src="imgs/governo-federal.png" class="gov-federal"></a>
+                    <a href="http://www.brasil.gov.br/"><img src="img/governo-federal.png" class="gov-federal"></a>
                 </div>
             </div>
         </footer>
